--- a/.github/workflows/build-and-publish-team-docker-image.yaml
+++ b/.github/workflows/build-and-publish-team-docker-image.yaml
@@ -46,5 +46,4 @@ jobs:
                 GH_TOKEN: ${{ secrets.GH_PAT }}
               run: |
                   # Example:
-                  # gh workflow run datoj24_deploy.yaml --repo czechitas/terraform --ref main -f team=${{ steps.push.outputs.team }}
-                  gh workflow run [YOUR_FILE_FROM_TERRAFORM_REPO_HERE] --repo czechitas/terraform --ref main -f team=${{ steps.push.outputs.team }}
+                  gh workflow run datoj24_deploy.yaml --repo czechitas/terraform --ref main -f team=${{ steps.push.outputs.team }}
